--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,40 @@
-*
-{color: rgb(39, 130, 210);
+* {
+    box-sizing: border-box;
+} 
+.container {
+    border: 4px solid lavender;
+    padding: 80px 24px 56px 24px;
+}
+.row {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto -24px auto;
+    display: flex;
+    justify-content: space-between;
+}
+.box {
+    border: 4px solid lavender;
+    margin-bottom: 24px;
+}
+
+.box-small {
+    height: 50px;
+}
+
+.box-tiny {
+    width: 30%;
+    height: 50px;
+}
+
+.box-large{
+    width: 45%;
+}
+
+.box-wrapper {
+    width: 45%;
+}
+
+.tiny-wrapper{
+    display: flex;
+    justify-content: space-between;
 }
